Add possibility to add remote fonts

--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <!-- <link rel="stylesheet" href="./assets/css/reset.css"> -->
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-  
+  <h1>head</h1>
+  <ul>
+    <li class="item">list 1</li>
+    <li class="item">list 2</li>
+    <li class="item">list 3</li>
+    <li class="item">list 4</li>
+    <li class="item">list 5</li>
+  </ul>
 </body>
 </html>
