--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <!-- <link rel="stylesheet" href="./assets/css/reset.css"> -->
+  
+  <link rel="stylesheet" href="print.css" media="print">
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
