Example breakpoint style

--- a/index.html
+++ b/index.html
@@ -11,13 +11,9 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-  <h1>head</h1>
-  <ul>
-    <li class="item">list 1</li>
-    <li class="item">list 2</li>
-    <li class="item">list 3</li>
-    <li class="item">list 4</li>
-    <li class="item">list 5</li>
-  </ul>
+  <section>
+    <h1>Lorem ipsum dolor sit amet.</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum architecto, ipsa unde, recusandae dolor atque, nemo corporis veritatis necessitatibus id numquam. Atque culpa est reiciendis fuga molestiae autem nemo obcaecati</p>
+  </section>
 </body>
 </html>
