--- a/index.html
+++ b/index.html
@@ -5,15 +5,39 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <!-- <link rel="stylesheet" href="./assets/css/reset.css"> -->
+ 
   
-  <link rel="stylesheet" href="print.css" media="print">
+  <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/user-card.css">
 </head>
 <body>
-  <section>
-    <h1>Lorem ipsum dolor sit amet.</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum architecto, ipsa unde, recusandae dolor atque, nemo corporis veritatis necessitatibus id numquam. Atque culpa est reiciendis fuga molestiae autem nemo obcaecati</p>
-  </section>
+ <section class="usersList">
+  <h1>list</h1>
+  <article class="userCard">
+    <div class="imageWrapper">
+      <img src="./assets/img/images.jpeg" alt="photo" class="photo">
+    </div>
+      <div class="userInfo">
+        <div class="personalInfo">
+          <h2 class="userName">jordan tuker</h2>
+          <h3><a href="">@jordantuker</a></h3>
+        </div>
+          <div class="statusContainer">
+            <div class="status">
+              <span>shots</span>
+              <span>250</span>
+            </div>
+            <div class="status">
+              <span>followers</span>
+              <span>1689</span>
+            </div>
+        </div>
+    
+    </div>
+
+
+  </article>
+ </section>
 </body>
 </html>
