--- a/index.html
+++ b/index.html
@@ -5,39 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
- 
-  
-  <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="stylesheet" href="./assets/css/user-card.css">
 </head>
 <body>
- <section class="usersList">
-  <h1>list</h1>
-  <article class="userCard">
-    <div class="imageWrapper">
-      <img src="./assets/img/images.jpeg" alt="photo" class="photo">
-    </div>
-      <div class="userInfo">
-        <div class="personalInfo">
-          <h2 class="userName">jordan tuker</h2>
-          <h3><a href="">@jordantuker</a></h3>
-        </div>
-          <div class="statusContainer">
-            <div class="status">
-              <span>shots</span>
-              <span>250</span>
-            </div>
-            <div class="status">
-              <span>followers</span>
-              <span>1689</span>
-            </div>
-        </div>
-    
-    </div>
-
-
-  </article>
- </section>
+  <div class="wrapper">
+ <img class="image" src="./assets/img/BlackForest_3000.jpg" alt="forest">
+</div>
 </body>
 </html>
