Create grib css

--- a/index.html
+++ b/index.html
@@ -5,11 +5,36 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="./assets/css/custom-grid.css">
   <link rel="stylesheet" href="./assets/css/style.css">
+
 </head>
-<body>
-  <div class="wrapper">
- <img class="image" src="./assets/img/BlackForest_3000.jpg" alt="forest">
-</div>
+<section class="container">
+  <div class="row">
+    <div class="col-4">
+      <article>
+        <h2>heading</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore hic iure dolores esse quae sequi ipsam, modi nesciunt, totam quia tempora expedita, ullam sapiente corrupti maxime fuga ad eaque! Quibusdam magnam qui rem repellendus fugiat exercitationem aut aliquid natus eos?</p>
+      </article>
+    </div>
+    <div class="col-4">
+      <article>
+        <h2>heading</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore hic iure dolores esse quae sequi ipsam, modi nesciunt, totam quia tempora expedita, ullam sapiente corrupti maxime fuga ad eaque! Quibusdam magnam qui rem repellendus fugiat exercitationem aut aliquid natus eos?</p>
+      </article>
+    </div>
+    <div class="col-4">
+      <article>
+        <h2>heading</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore hic iure dolores esse quae sequi ipsam, modi nesciunt, totam quia tempora expedita, ullam sapiente corrupti maxime fuga ad eaque! Quibusdam magnam qui rem repellendus fugiat exercitationem aut aliquid natus eos?</p>
+      </article>
+    </div>
+    
+  </div>
+  
+  
+
+</section>
 </body>
 </html>
