Add changes grib css

--- a/index.html
+++ b/index.html
@@ -12,19 +12,31 @@
 </head>
 <section class="container">
   <div class="row">
-    <div class="col-4">
+    <div class="col-4 col-md-3 col-lg-2">
       <article>
         <h2>heading</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore hic iure dolores esse quae sequi ipsam, modi nesciunt, totam quia tempora expedita, ullam sapiente corrupti maxime fuga ad eaque! Quibusdam magnam qui rem repellendus fugiat exercitationem aut aliquid natus eos?</p>
       </article>
     </div>
-    <div class="col-4">
+    <div class="col-4 col-md-3 col-lg-2">
       <article>
         <h2>heading</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore hic iure dolores esse quae sequi ipsam, modi nesciunt, totam quia tempora expedita, ullam sapiente corrupti maxime fuga ad eaque! Quibusdam magnam qui rem repellendus fugiat exercitationem aut aliquid natus eos?</p>
       </article>
     </div>
-    <div class="col-4">
+    <div class="col-4 col-md-3 col-lg-2">
+      <article>
+        <h2>heading</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore hic iure dolores esse quae sequi ipsam, modi nesciunt, totam quia tempora expedita, ullam sapiente corrupti maxime fuga ad eaque! Quibusdam magnam qui rem repellendus fugiat exercitationem aut aliquid natus eos?</p>
+      </article>
+    </div>
+    <div class="col-4 col-md-3 col-lg-2">
+      <article>
+        <h2>heading</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore hic iure dolores esse quae sequi ipsam, modi nesciunt, totam quia tempora expedita, ullam sapiente corrupti maxime fuga ad eaque! Quibusdam magnam qui rem repellendus fugiat exercitationem aut aliquid natus eos?</p>
+      </article>
+    </div>
+    <div class="col-4 col-lg-3">
       <article>
         <h2>heading</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore hic iure dolores esse quae sequi ipsam, modi nesciunt, totam quia tempora expedita, ullam sapiente corrupti maxime fuga ad eaque! Quibusdam magnam qui rem repellendus fugiat exercitationem aut aliquid natus eos?</p>
