--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     </div>
       <div class="userInfo">
         <div class="personalInfo">
-          <h2 class="userName">jordan tuker</h2>
+          <h2 class="userName capitalize change-font">jordan tucker</h2>
           <h3><a href="">@jordantuker</a></h3>
         </div>
-          <div class="statusContainer">
-            <div class="status">
+        <div class="statusContainer">
+          <div class="status">
               <span>shots</span>
-              <span>250</span>
+              <span class="change-font">250</span>
             </div>
             <div class="status">
               <span>followers</span>
-              <span>1689</span>
+              <span class="change-font">1689</span>
             </div>
         </div>
     
